
Version 0.2
	Improved Documentation
	Added SetInformation for additional error information to PdfError
	Fixed the underline color of text
	Introduced PdfReference class

Version 0.1 (11 June 2006)
	Initial release
	